# negate

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: run-tests.yml
negate/: __init__.py  base.py  negate.py  negator.py  negator_de.py  negator_en.py  py.typed  token.py  version.py
negate/negators/: supported_languages.py
negate/negators/de/: __init__.py  negator.py
negate/negators/en/: __init__.py  negator.py
negate/negators/es/: __init__.py
negate/utils/: tokens.py
tests/: README.md  conftest.py  data.py  requirements.txt  test_negate.py  utils.py
tests/en/: data.py  test_en.py
