[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "negate"
dynamic = [
    "version",
]
authors = [
    { name="Diego Miguel Lozano", email="hello@diegomiguel.me" },
]
maintainers = [
    { name="Diego Miguel Lozano", email="hello@diegomiguel.me" },
]
description = "A Python module that negates sentences."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
keywords = [
    "NLP",
    "negate",
    "negation",
    "negator",
    "sentence-negation",
    "sentence-negator",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "spacy>=3.4.1,<3.5.0",
    "spacy-transformers>=1.1.8,<1.2.0",
    "lemminflect>=0.2.3,<0.3.0",
]

[project.urls]
Homepage = "https://github.com/dmlls/negate"
"GitHub Issues" = "https://github.com/dmlls/negate/issues"
"GitHub Repo" = "https://github.com/dmlls/negate"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "negate/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "negate",
]

[tool.pytest.ini_options]
minversion = "7.2.0"
addopts = "-ra"
testpaths = [
    "tests",
]
python_functions = [
    "test_*",
]
